--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,8 @@ cmake_minimum_required(VERSION 3.16.3)
 
 project(CT-compiler VERSION 1.0)
 
+include(sources.cmake)
+
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED 14)
 
@@ -10,30 +12,14 @@ set(C_FLAGS
     -o3
 )
 
-add_library(${PROJECT_NAME}-main SHARED
-    src/main.cpp
-)
-
-target_include_directories(${PROJECT_NAME}-main PUBLIC
-    ${CMAKE_SOURCE_DIR}/include
-    /include
-)
-
-target_compile_options(${PROJECT_NAME}-main
-    PRIVATE
-        ${C_FLAGS}
-)
-
-
 add_executable(${PROJECT_NAME}
-    $<TARGET_OBJECTS:${PROJECT_NAME}-main>
     ${HEADERS_LIST}
     ${SOURCES_LIST}
 )
 
 target_include_directories(${PROJECT_NAME} PUBLIC
     ${CMAKE_SOURCE_DIR}/include
-    /include
+    ${CMAKE_SOURCE_DIR}/src
 )
 
 target_compile_options(${PROJECT_NAME}
@@ -41,4 +27,3 @@ target_compile_options(${PROJECT_NAME}
         ${C_FLAGS}
 )
 
-target_link_libraries(${PROJECT_NAME} PUBLIC ${PROJECT_NAME}-main)
